--- a/index.html
+++ b/index.html
@@ -15,43 +15,7 @@
         <button id="submit">Add</button>
     </form>
 
-    <div class="wrap">
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-        <div class="todo">
-            <h3 class="todo-text">Buy Milk</h3>
-            <p class="time">18:09</p>
-            <img class="delete" src="./cross.svg" alt="">
-        </div>
-    </div>
+    <div class="wrap"></div>
 
     <script type="module" src="./js/script.js"></script>
 </body>
